traefik-k8s-tls-example/04-echoserver.yml
apiVersion: v1
kind: Service
metadata:
  name: echoserver
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    k8s-app: echoserver
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: echoserver
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: echoserver
    spec:
      containers:
      - image: gcr.io/google_containers/echoserver:1.4
        # imagePullPolicy: Always
        name: echoserver
        ports:
        - containerPort: 8080
