traefik-k8s-tls-example/01-traefik-dashboard.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-console
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress
spec:
  selector:
    k8s-app: traefik-ingress
  ports:
    - port: 8080
      # target port will be the oauth2_proxy port
      targetPort: 4180
      protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: traefik.thepishoppe.com
      http:
        paths:
        - path: /
          backend:
            serviceName: traefik-console
            servicePort: 8080
