traefik-k8s-tls-example/02-hello.yml
apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: hello
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - image: us.gcr.io/splendid-timer-160003/hello:latest   #dstroot/hello  # tutum/hello-world
        # imagePullPolicy: Always
        name: hello
        ports:
        - containerPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: thepishoppe.com
    http:
      paths:
      - path: /
        backend:
          serviceName: hello
          servicePort: 80
